syntax = "proto3";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// buf:lint:ignore PACKAGE_SAME_GO_PACKAGE
option go_package = "api/admin/doctors/v1";

// -------------- Сервис по работе с докторов ---------------
service DoctorAdminService {
  rpc GetDoctors(GetDoctorsRequest) returns (GetDoctorsResponse) {
    option (google.api.http) = {get: "/api/v1/admin/doctors"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение врачей"};
  }
  rpc GetDoctorsByIDs(GetDoctorsByIDsRequest) returns (GetDoctorsByIDsResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors_by_ids"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение врачей по IDs"};
  }
  rpc SortDoctors(SortDoctorsRequest) returns (SortDoctorsResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/sort"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Сортировка врачей"};
  }
  // todo подумать тоже, а надо ли тут эту сортировку
  //    rpc FilterDoctors(FilterDoctorsRequest) returns (FilterDoctorsResponse) {
  //        option (google.api.http) = {
  //            post: "/api/v1/admin/doctors/filter"
  //            body: "*"
  //        };
  //        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
  //            summary: "Фильтрация врачей"
  //        };
  //    }
  rpc SearchDoctors(SearchDoctorsRequest) returns (SearchDoctorsResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск врача по параметрам"};
  }
  rpc GetDoctorByID(GetDoctorByIDRequest) returns (GetDoctorByIDResponse) {
    option (google.api.http) = {
      get: "/api/v1/admin/doctor/{doctor_id}"
      // /api/v1/admin/doctors -> /api/v1/admin/doctor (без s) чтобы работало норм
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение карточки врача"};
  }
  rpc UpdateDoctor(UpdateDoctorRequest) returns (UpdateDoctorResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Обновление врача"};
  }
  rpc DeleteDoctor(DeleteDoctorRequest) returns (DeleteDoctorResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление врача"};
  }
  rpc ActivateDoctor(ActivateDoctorRequest) returns (ActivateDoctorResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/activate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Активация врача"};
  }
  rpc DeactivateDoctor(DeactivateDoctorRequest) returns (DeactivateDoctorResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/deactivate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Деактивация врача"};
  }
  rpc SaveDoctorPhoto(SaveDoctorPhotoRequest) returns (SaveDoctorPhotoResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/save_photo"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Сохранение фотографии врача"};
  }
  rpc AddAdditionalCity(AddDoctorAdditionalCityRequest) returns (AddDoctorAdditionalCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/add_additional_city"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление дополнительного города"};
  }
  rpc AddAdditionalSpeciality(AddDoctorAdditionalSpecialityRequest) returns (AddDoctorAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/add_additional_speciality"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление доп специальности"};
  }
  rpc DeleteAdditionalCity(DeleteDoctorAdditionalCityRequest) returns (DeleteDoctorAdditionalCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/delete_additional_city"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление доп города"};
  }
  rpc DeleteAdditionalSpeciality(DeleteDoctorAdditionalSpecialityRequest) returns (DeleteDoctorAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/delete_additional_speciality"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление доп специальности"};
  }
  rpc UpdateSubscribers(UpdateSubscribersRequest) returns (UpdateSubscribersResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctor/{doctor_id}/update_subscribers"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Ручное обновление подписчиков"};
  }

  // todo как-будто бы создание вообще не нужно
  //    rpc CreateDoctor(CreateDoctorRequest) returns (CreateDoctorResponse) {
  //        option (google.api.http) = {
  //            post: "/api/v1/admin/doctors/create"
  //            body: "*"
  //        };
  //        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
  //            summary: "Создание врача"
  //        };
  //    }
}

// -------------- Сервис по работе с городами докторов ---------------
service DoctorAdminCityService {
  rpc GetCities(GetDoctorsCitiesRequest) returns (GetDoctorsCitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/doctors/cities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение городов врачей"};
  }
  rpc SearchCities(SearchDoctorsCitiesRequest) returns (SearchDoctorsCitiesResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/cities/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск города по названию"};
  }
  rpc CreateCity(CreateDoctorsCityRequest) returns (CreateDoctorsCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/cities/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Создание нового города"};
  }
  rpc DeleteCity(DeleteDoctorsCityRequest) returns (DeleteDoctorsCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/cities/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление существующего города"};
  }
}

// -------------- Сервис по работе со специальностями докторов ---------------
service DoctorAdminSpecialityService {
  rpc GetSpecialities(GetDoctorsSpecialitiesRequest) returns (GetDoctorsSpecialitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/doctors/specialities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение специальностей врачей"};
  }
  rpc SearchSpeciality(SearchDoctorsSpecialityRequest) returns (SearchDoctorsSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/specialities/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск специальностей врачей"};
  }
  rpc CreateSpeciality(CreateDoctorsSpecialityRequest) returns (CreateDoctorsSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/specialities/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление специальности врача"};
  }
  rpc GetSpeciality(GetSpecialityRequest) returns (GetSpecialityResponse) {
    option (google.api.http) = {get: "/api/v1/admin/doctors/speciality/{speciality_id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение специальности врача"};
  }
  rpc AddAdditionalSpeciality(AddAdditionalSpecialityRequest) returns (AddAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/speciality/{speciality_id}/add_additional"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление дополнительной специальности к основной"};
  }
  rpc DeleteAdditionalSpeciality(DeleteAdditionalSpecialityRequest) returns (DeleteAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/doctors/speciality/{speciality_id}/delete_additional/{additional_spec_id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление дополнительной специальности у основной"};
  }
  // todo а надо ли
  //    rpc DeleteSpeciality(DeleteSpecialityRequest) returns (DeleteSpecialityResponse) {
  //        option (google.api.http) = {
  //            post: "/api/v1/admin/doctors/specialities/delete"
  //            body: "*"
  //        };
  //        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
  //            summary: "Удаление специальности врача"
  //        };
  //    }
}

// -------------- Сервис по работе с докторов ---------------
message GetDoctorsRequest {}

message GetDoctorsResponse {
  repeated Doctor doctors = 1;
  message Doctor {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;

    message CooperationType {
      int64 id = 1;
      string name = 2;
    }
  }
}

message SortDoctorsRequest {}

message SortDoctorsResponse {
  repeated Doctor doctors = 1;
  message Doctor {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;

    message CooperationType {
      int64 id = 1;
      string name = 2;
    }
  }
}

message SearchDoctorsRequest {
  string query = 1;
}

message SearchDoctorsResponse {
  repeated Doctor doctors = 1;
  message Doctor {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;

    message CooperationType {
      int64 id = 1;
      string name = 2;
    }
  }
}

message GetDoctorByIDRequest {
  int64 doctor_id = 1;
}

message GetDoctorByIDResponse {
  int64 id = 1;
  string name = 2;
  string slug = 3;

  // Соцсети
  string inst_url = 4;
  string vk_url = 5;
  string dzen_url = 6;
  string tg_url = 7;
  string tg_channel_url = 8;
  string youtube_url = 9;
  string tiktok_url = 10;
  string site_link = 11;

  // Города и специализации
  repeated CityItem additional_cities = 12;
  repeated SpecialityItem additional_specialities = 13;

  CityItem main_city = 14;
  SpecialityItem main_speciality = 15;

  repeated SubscribersItem subscribers_info = 16;
  string main_blog_theme = 17;
  string image = 18;

  bool is_kf_doctor = 19;
  bool is_active = 20;

  string birth_date = 21;
  string created_at = 22;
  CooperationType cooperation_type = 23;
  string medical_directions = 24;
  string marketing_preferences = 25;

  message CityItem {
    int64 id = 1;
    string name = 2;
  }

  message SpecialityItem {
    int64 id = 1;
    string name = 2;
  }

  message CooperationType {
    int64 id = 1;
    string name = 2;
  }

  message SubscribersItem {
    string key = 1; // todo сделать текстовый енам
    string subs_count = 2;
    string subs_count_text = 3;
    string last_updated_date = 4;
  }
}

message UpdateDoctorRequest {
  int64 doctor_id = 1;

  // todo
}

message UpdateDoctorResponse {}

message DeleteDoctorRequest {
  int64 doctor_id = 1;
}

message DeleteDoctorResponse {}

message ActivateDoctorRequest {
  int64 doctor_id = 1;
}

message ActivateDoctorResponse {}

message DeactivateDoctorRequest {
  int64 doctor_id = 1;
}

message DeactivateDoctorResponse {}

message SaveDoctorPhotoRequest {
  int64 doctor_id = 1;
  string image_data = 2; // файл в строке base64
}

message SaveDoctorPhotoResponse {
  string image_url = 1;
}

message AddDoctorAdditionalCityRequest {
  int64 doctor_id = 1;
  int64 city_id = 2;
}

message AddDoctorAdditionalCityResponse {}

message AddDoctorAdditionalSpecialityRequest {
  int64 doctor_id = 1;
  int64 speciality_id = 2;
}

message AddDoctorAdditionalSpecialityResponse {}

message DeleteDoctorAdditionalCityRequest {
  int64 doctor_id = 1;
  int64 city_id = 2;
}

message DeleteDoctorAdditionalCityResponse {}

message DeleteDoctorAdditionalSpecialityRequest {
  int64 doctor_id = 1;
  int64 speciality_id = 2;
}

message DeleteDoctorAdditionalSpecialityResponse {}

message UpdateSubscribersRequest {
  int64 doctor_id = 1;
}

message UpdateSubscribersResponse {}

message GetDoctorsByIDsRequest {
  repeated int64 ids = 1;
}
message GetDoctorsByIDsResponse {
  repeated Doctor doctors = 1;
  message Doctor {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;

    message CooperationType {
      int64 id = 1;
      string name = 2;
    }
  }
}

// -------------- Сервис по работе с городами докторов ---------------
message GetDoctorsCitiesRequest {}

message GetDoctorsCitiesResponse {
  repeated CityItem cities = 1;

  message CityItem {
    int64 id = 1;
    string name = 2;
  }
}

message SearchDoctorsCitiesRequest {
  string query = 1;
}

message SearchDoctorsCitiesResponse {
  repeated CityItem cities = 1;

  message CityItem {
    int64 id = 1;
    string name = 2;
  }
}

message CreateDoctorsCityRequest {
  string name = 1;
}

message CreateDoctorsCityResponse {
  int64 id = 1;
  string name = 2;
}

message DeleteDoctorsCityRequest {
  int64 city_id = 1;
}

message DeleteDoctorsCityResponse {}

// -------------- Сервис по работе со специальностями докторов ---------------
message GetDoctorsSpecialitiesRequest {}

message GetDoctorsSpecialitiesResponse {
  repeated SpecialityItem specialities = 1;

  message SpecialityItem {
    int64 id = 1;
    string name = 2;
  }
}

message SearchDoctorsSpecialityRequest {
  string query = 1;
}

message SearchDoctorsSpecialityResponse {
  repeated SpecialityItem specialities = 1;

  message SpecialityItem {
    int64 id = 1;
    string name = 2;
  }
}

message CreateDoctorsSpecialityRequest {
  string name = 1;
}

message CreateDoctorsSpecialityResponse {
  int64 id = 1;
  string name = 2;
}

message GetSpecialityRequest {
  int64 speciality_id = 1;
}

message GetSpecialityResponse {}

message AddAdditionalSpecialityRequest {
  int64 speciality_id = 1;
  int64 additional_spec_id = 2;
}

message AddAdditionalSpecialityResponse {}

message DeleteAdditionalSpecialityRequest {
  int64 speciality_id = 1;
  int64 additional_spec_id = 2;
}

message DeleteAdditionalSpecialityResponse {}
